--- a/Home.html
+++ b/Home.html
@@ -13,6 +13,7 @@
 
     <link rel="stylesheet" href="styles.css">
     <script>app.js</script>
+    <title>Home-conference</title>
 </head>
 
 <body>
