add classes to finish about responsive section

--- a/About.html
+++ b/About.html
@@ -12,13 +12,12 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
-    <script>app.js</script>
-    <title>About-conference</title>
+    <title>Home-conference</title>
 </head>
 
 <body>
-    <header class="desk_menu">
-        <nav>
+    <header>
+        <nav class="desk_menu">
             <ul class="social-icons">
                 <li><a class="top-a" href="https://www.twitter.com/"><img src="./images/ic_twitter.svg"></a></li>
                 <li><a class="top-a" href="https://www.instagram.com/"><img src="./images/ic_linkedin.svg"></a></li>
@@ -29,131 +28,130 @@
 
         </nav>
 
-    </header>
-
-    <header class="menu">
-        <nav id="nav_menu">
+        <nav class="nav_menu">
 
             <img class="logo" src="./images/logo.PNG" alt="logo">
             <ul class="desk-bar">
-                <li><a class="top-b" href="#home">home</a></li>
-                <li><a class="top-b" href="#mobile-home">About</a></li>
+                <li><a class="top-b" href="./Home.html">Home</a></li>
+                <li><a class="top-b" href="./About.html">About</a></li>
                 <li><a class="top-b" href="#join">Join</a></li>
                 <li><a class="top-b" href="#sponsor">Sponsor</a></li>
                 <li><a class="top-b" href="#news">News</a></li>
             </ul>
         </nav>
+
     </header>
 
 
+    <main>
 
-    <main class="home-section">
-        <div class="background">
-            <section id="home">
-                <span class="hamb"><img src="./images/bx-menu.svg" alt="hamb icon"></span>
-                <span class="span1">"Hello! Trading Community"</span>
-                <h1 class="title1">LATIN AMERICA TRADING CONFERENCE 2023</h1>
-                <p class="home-p">An exciting event sharing with profitable traders with more than 10 years of
-                    experience operating the
-                    financial markets.</p>
-                <h2>2023.06.20(TUE) ≈ 22(THU)</h2>
-                <span class="span2"> @ International Business and Exhibition Center of Bogotá, Colombia -
-                    Corferias</span>
+        <section class="hidemobile" id="mobile_menu">
+            <a class="topx" href="#"><img src="./images/xtopmenu.svg" alt=""></a>
+
+            <ul class="top_menu">
+                <li><a class="top-a1" href="./Home.html">Home</a></li>
+                <li><a class="top-a2" href="./About.html">About</a></li>
+                <li><a class="top-a3" href="#join">Join</a></li>
+                <li><a class="top-a4" href="#sponsor">Sponsor</a></li>
+                <li><a class="top-a5" href="#news">News</a></li>
+            </ul>
+
+        </section>
+
+        <div id="content" class="showcontent">
+            <div class="abbackground">
+                <section id="abhome">
+                    <span class="hamb"><img src="./images/bx-menu.svg" alt="hamb icon"></span>
+                    <span class="abspan1">"Hello! Trading Community"</span>
+                    <h1 class="abtitle1">LATIN AMERICA TRADING CONFERENCE 2023</h1>
+                    <hr class="abdivision_mh3">
+                    <p class="abhome-p">The Latin America Trading Conference 2023 will provide a series of panel
+                        sessions with an interactive program that addresses market needs, providing impartial,
+                        high-quality content and the knowledge and experience of industry-leading speakers. There will
+                        be ample networking opportunities throughout the event and into the evening at the post-event
+                        cocktail party.</p>
+                    <h2 class="abh2">Please contact us per Email for any further questions about Latin America Trading
+                        conference 2023!</h2>
+                    <span class="abspan2"> latconference@cckorea.org</span>
+
+                </section>
+            </div>
+
+            <section class="conferencelogo">
+
+                <h3 class="abh3conf">Latin America Trading Conference 2023 Logo</h3>
+                <hr class="abdivision_mh3">
+                <span class="abconfspan2">The logo of Latin America Traging Conference was decided through the logo
+                    competition from 8. June to 7. July.</span>
+                <span class="abconfspanlong">The logo of Latin America Traging Conference was decided through the logo
+                    competition from 8. June to 7. July. After online public voting Selection Committee's judging
+                    proces, the logo from Juan Pablo Guerrero won the prize. After consultatin with Mr. Guerrero we
+                    optimized the prize.winning-logo for this year's Tradin Conference as following:</span>
+                <img class="tlogo" src="./images/logo.PNG" alt="trading logo">
 
             </section>
+
+            <section class="past">
+
+                <h3 class="abh3conf">See the past LA Trading Conference</h3>
+                <hr class="abdivision_mh3">
+                <span class="abconfspan2p">Take a look for the past two LA Trading Conference wich took place in Colombia
+                    and in Ecuador</span>
+                <div class="imagesdesk">
+                    <div class="cole">
+                        <h4 class="h4cole">2018</h4>
+                        <h5 class="h5cole">LA Trading Conference in Colombia</h5>
+                    </div>
+
+                    <div class="ecue">
+                        <h4 class="h4ecue">2017</h4>
+                        <h5 class="h5ecue">LA Trading Conference in Ecuador</h5>
+                    </div>
+                </div>
+            </section>
+
+            <section class="partner">
+
+                <h3 class="h3partner">partner</h3>
+                <hr class="h3partnerdiv">
+
+                <div class="ticons">
+                    <img class="ticon1" src="./images/trading1.PNG" alt="">
+                    <img class="ticon1" src="./images/trading2.PNG" alt="">
+                    <img class="ticon1" src="./images/trading3.PNG" alt="">
+                    <img class="ticon1" src="./images/trading4.PNG" alt="">
+                    <img class="ticon1" src="./images/trading5.PNG" alt="">
+                    <img class="ticon1" src="./images/trading6.PNG" alt="">
+
+                </div>
+
+            </section>
+
+
+            <section id="feathidden" class="abfeaturedmobile">
+
+                <h3 class="fs">Featured Speakers</h3>
+                <hr class="division_fh3">
+
+                <button class="f1bdown showcontent">More</button>
+                <button class="f1bup hidemobile">less</button>
+
+            </section>
+
+            <footer class="footer">
+                <img class="cclogo" src="./images/cclogo.PNG" alt="">
+                <img class="cclogodark" src="./images/cclogodark.PNG" alt="">
+                <span class="footspan">2015 Creative Commons Korea. Some Rights Reserved.</span>
+            </footer>
+
         </div>
-
-        <section class="mainprogram">
-
-            <h3 class="mp">Main program</h3>
-            <hr class="division_mh3">
-
-            <div class="p1">
-                <div class="logo1"></div>
-                <h4 class="h41">Lecture</h4>
-                <p class="p1p1">Listen to the speakers from various countries about their experience at financial
-                    markets.</p>
-            </div>
-            <div class="p1">
-                <div class="logo2"></div>
-                <h4 class="h42">CC exhibition</h4>
-                <p class="p1p2">Listen to the speakers fro various countriesabout their experience at financial markets.
-                </p>
-            </div>
-            <div class="p1">
-                <div class="logo3"></div>
-                <h4 class="h43">Forum</h4>
-                <p class="p1p3">Listen to the speakers fro various countriesabout their experience at financial markets.
-                </p>
-            </div>
-            <div class="p1">
-                <div class="logo4"></div>
-                <h4 class="h44">Workshop</h4>
-                <p class="p1p4">Listen to the speakers fro various countriesabout their experience at financial markets.
-                </p>
-            </div>
-            <div class="p1">
-                <div class="logo5"></div>
-                <h4 class="h45">CC Ignite</h4>
-                <p class="p1p5">Listen to the speakers fro various countriesabout their experience at financial markets.
-                </p>
-            </div>
-
-            <button class="p1b">Join Trading Conference 2023</button>
-
-        </section>
-
-        <section class="Featured">
-
-            <h3 class="fs">Featured Speakers</h3>
-            <hr class="division_fh3">
-
-
-            <div class="card1">
-
-                <img class="oliver" src="./images/oliverlogo.PNG" alt="Oliver Image">
-
-                <div class="card1rs">
-                    <h4 class="feat1h4">Oliver L. Velez</h4>
-                    <p class="feat1p1">Co-founder of Pristine Capital Holdings, Inc., one of the world&apos;s leading
-                        educational resources for investors.</p>
-                    <hr class="division-c1">
-                    <p class="feat1p2">has been the subject of numerous articles and books written about Wall
-                        Street&apos;s most successful traders, including popular books such as Bulls, Bears, and Brains
-                    </p>
-                </div>
-
-            </div>
-
-            <div class="card1">
-
-                <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                <div class="card1rs">
-                    <h4 class="feat1h4">Marcello Arrambide</h4>
-                    <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                        able to train others to obtain their own financial freedom.</p>
-                    <hr class="division-c1">
-                    <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for about a
-                        decade through Day Trading Academy.</p>
-                </div>
-            </div>
-
-            <button class="f1b">More</button>
-
-        </section>
-
-      
-
-
-
 
 
     </main>
-    <footer></footer>
 
-    
 
+
+    <script src="./app.js"></script>
 </body>
 
 </html>
