organize html file to add function classes

--- a/Home.html
+++ b/Home.html
@@ -32,8 +32,8 @@
 
             <img class="logo" src="./images/logo.PNG" alt="logo">
             <ul class="desk-bar">
-                <li><a class="top-b" href="#home">Home</a></li>
-                <li><a class="top-b" href="#mobile-home">About</a></li>
+                <li><a class="top-b" href="./Home.html">Home</a></li>
+                <li><a class="top-b" href="./About.html">About</a></li>
                 <li><a class="top-b" href="#join">Join</a></li>
                 <li><a class="top-b" href="#sponsor">Sponsor</a></li>
                 <li><a class="top-b" href="#news">News</a></li>
@@ -49,7 +49,7 @@
             <a class="topx" href="#"><img src="./images/xtopmenu.svg" alt=""></a>
 
             <ul class="top_menu">
-                <li><a class="top-a1" href="#home">Home</a></li>
+                <li><a class="top-a1" href="./Home.html">Home</a></li>
                 <li><a class="top-a2" href="./About.html">About</a></li>
                 <li><a class="top-a3" href="#join">Join</a></li>
                 <li><a class="top-a4" href="#sponsor">Sponsor</a></li>
@@ -79,42 +79,46 @@
                 <h3 class="mp">Main program</h3>
                 <hr class="division_mh3">
 
-                <div class="p1">
-                    <div class="logo1"></div>
-                    <h4 class="h41">Lecture</h4>
-                    <p class="p1p1">Listen to the speakers from various countries about their experience at financial
-                        markets.</p>
+                <div class="mainpdesk">
+                    <div class="p1">
+                        <div class="logo1"><img src="" alt=""></div>
+                        <h4 class="h41">Lecture</h4>
+                        <p class="p1p1">Listen to the speakers from various countries about their experience at
+                            financial
+                            markets.</p>
+                    </div>
+                    <div class="p1">
+                        <div class="logo2"></div>
+                        <h4 class="h42">CC exhibition</h4>
+                        <p class="p1p2">Listen to the speakers from various countriesabout their experience at financial
+                            markets.
+                        </p>
+                    </div>
+                    <div class="p1">
+                        <div class="logo3"></div>
+                        <h4 class="h43">Forum</h4>
+                        <p class="p1p3">Listen to the speakers from various countriesabout their experience at financial
+                            markets.
+                        </p>
+                    </div>
+                    <div class="p1">
+                        <div class="logo4"></div>
+                        <h4 class="h44">Workshop</h4>
+                        <p class="p1p4">Listen to the speakers from various countriesabout their experience at financial
+                            markets.
+                        </p>
+                    </div>
+                    <div class="p1">
+                        <div class="logo5"></div>
+                        <h4 class="h45">CC Ignite</h4>
+                        <p class="p1p5">Listen to the speakers from various countriesabout their experience at financial
+                            markets.
+                        </p>
+                    </div>
                 </div>
-                <div class="p1">
-                    <div class="logo2"></div>
-                    <h4 class="h42">CC exhibition</h4>
-                    <p class="p1p2">Listen to the speakers fro various countriesabout their experience at financial
-                        markets.
-                    </p>
-                </div>
-                <div class="p1">
-                    <div class="logo3"></div>
-                    <h4 class="h43">Forum</h4>
-                    <p class="p1p3">Listen to the speakers fro various countriesabout their experience at financial
-                        markets.
-                    </p>
-                </div>
-                <div class="p1">
-                    <div class="logo4"></div>
-                    <h4 class="h44">Workshop</h4>
-                    <p class="p1p4">Listen to the speakers fro various countriesabout their experience at financial
-                        markets.
-                    </p>
-                </div>
-                <div class="p1">
-                    <div class="logo5"></div>
-                    <h4 class="h45">CC Ignite</h4>
-                    <p class="p1p5">Listen to the speakers fro various countriesabout their experience at financial
-                        markets.
-                    </p>
-                </div>
-
-                <button class="p1b">Join Trading Conference 2023</button>
+                
+                <button class="p1button1">Join Trading Conference 2023</button>
+                <button class="p1button2">SEE THE WHOLE PROGRAM</button>
 
             </section>
 
@@ -123,113 +127,139 @@
                 <h3 class="fs">Featured Speakers</h3>
                 <hr class="division_fh3">
 
+                <div class="featcards">
+                    <div class="card1 showmobile">
 
-                <div class="card1 showmobile">
+                        <img class="oliver" src="./images/oliverlogo.PNG" alt="Oliver Image">
 
-                    <img class="oliver" src="./images/oliverlogo.PNG" alt="Oliver Image">
+                        <div class="card1rs">
+                            <h4 class="feat1h4">Oliver L. Velez</h4>
+                            <p class="feat1p1">Co-founder of Pristine Capital Holdings, Inc., one of the world&apos;s
+                                leading
+                                educational resources for investors.</p>
+                            <hr class="division-c1">
+                            <p class="feat1p2">has been the subject of numerous articles and books written about Wall
+                                Street&apos;s most successful traders, including popular books such as Bulls, Bears, and
+                                Brains
+                            </p>
+                        </div>
 
-                    <div class="card1rs">
-                        <h4 class="feat1h4">Oliver L. Velez</h4>
-                        <p class="feat1p1">Co-founder of Pristine Capital Holdings, Inc., one of the world&apos;s
-                            leading
-                            educational resources for investors.</p>
-                        <hr class="division-c1">
-                        <p class="feat1p2">has been the subject of numerous articles and books written about Wall
-                            Street&apos;s most successful traders, including popular books such as Bulls, Bears, and
-                            Brains
-                        </p>
                     </div>
 
-                </div>
+                    <div class="card2 showmobile">
 
-                <div class="card2 showmobile">
+                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
 
-                    <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
+                        <div class="card1rs">
+                            <h4 class="feat1h4">Marcello Arrambide</h4>
+                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
+                                able to train others to obtain their own financial freedom.</p>
+                            <hr class="division-c1">
+                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
+                                about
+                                a
+                                decade through Day Trading Academy.</p>
+                        </div>
+                    </div>
 
-                    <div class="card1rs">
-                        <h4 class="feat1h4">Marcello Arrambide</h4>
-                        <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                            able to train others to obtain their own financial freedom.</p>
-                        <hr class="division-c1">
-                        <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for about
-                            a
-                            decade through Day Trading Academy.</p>
+                    <div class="card3 hidemobile">
+
+                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
+
+                        <div class="card1rs">
+                            <h4 class="feat1h4">Marcello Arrambide</h4>
+                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
+                                able to train others to obtain their own financial freedom.</p>
+                            <hr class="division-c1">
+                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
+                                about
+                                a
+                                decade through Day Trading Academy.</p>
+                        </div>
+                    </div>
+
+                    <div class="card4 hidemobile">
+
+                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
+
+                        <div class="card1rs">
+                            <h4 class="feat1h4">Marcello Arrambide</h4>
+                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
+                                able to train others to obtain their own financial freedom.</p>
+                            <hr class="division-c1">
+                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
+                                about
+                                a
+                                decade through Day Trading Academy.</p>
+                        </div>
+                    </div>
+
+                    <div class="card5 hidemobile">
+
+                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
+
+                        <div class="card1rs">
+                            <h4 class="feat1h4">Marcello Arrambide</h4>
+                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
+                                able to train others to obtain their own financial freedom.</p>
+                            <hr class="division-c1">
+                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
+                                about
+                                a
+                                decade through Day Trading Academy.</p>
+                        </div>
+                    </div>
+
+                    <div class="card6 hidemobile">
+
+                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
+
+                        <div class="card1rs">
+                            <h4 class="feat1h4">Marcello Arrambide</h4>
+                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
+                                able to train others to obtain their own financial freedom.</p>
+                            <hr class="division-c1">
+                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
+                                about
+                                a
+                                decade through Day Trading Academy.</p>
+                        </div>
                     </div>
                 </div>
 
-                <div class="card3 hidemobile">
-
-                    <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                    <div class="card1rs">
-                        <h4 class="feat1h4">Marcello Arrambide</h4>
-                        <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                            able to train others to obtain their own financial freedom.</p>
-                        <hr class="division-c1">
-                        <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for about
-                            a
-                            decade through Day Trading Academy.</p>
-                    </div>
-                </div>
-
-                <div class="card4 hidemobile">
-
-                    <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                    <div class="card1rs">
-                        <h4 class="feat1h4">Marcello Arrambide</h4>
-                        <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                            able to train others to obtain their own financial freedom.</p>
-                        <hr class="division-c1">
-                        <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for about
-                            a
-                            decade through Day Trading Academy.</p>
-                    </div>
-                </div>
-
-                <div class="card5 hidemobile">
-
-                    <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                    <div class="card1rs">
-                        <h4 class="feat1h4">Marcello Arrambide</h4>
-                        <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                            able to train others to obtain their own financial freedom.</p>
-                        <hr class="division-c1">
-                        <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for about
-                            a
-                            decade through Day Trading Academy.</p>
-                    </div>
-                </div>
-
-                <div class="card6 hidemobile">
-
-                    <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                    <div class="card1rs">
-                        <h4 class="feat1h4">Marcello Arrambide</h4>
-                        <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                            able to train others to obtain their own financial freedom.</p>
-                        <hr class="division-c1">
-                        <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for about
-                            a
-                            decade through Day Trading Academy.</p>
-                    </div>
-                </div>
-
-                <button class="f1bdown showcontent">More</button>
-                <button class="f1bup hidemobile">less</button>
+                <button class="f1bdown showcontent">MORE</button>
+                <button class="f1bup hidemobile">LESS</button>
 
             </section>
 
         </div>
 
+        <section class="partnerab">
+
+            <h3 class="h3partnerab">Partner</h3>
+            <hr class="h3partnerdivab">
+
+            <div class="ticonsab">
+                <img class="ticon1ab" src="./images/trading1.PNG" alt="tradinglogo1">
+                <img class="ticon1ab" src="./images/trading2.PNG" alt="tradinglogo2">
+                <img class="ticon1ab" src="./images/trading3.PNG" alt="tradinglogo3">
+                <img class="ticon1ab" src="./images/trading4.PNG" alt="tradinglogo4">
+                <img class="ticon1ab" src="./images/trading5.PNG" alt="tradinglogo5">
+                <img class="ticon1ab" src="./images/trading6.PNG" alt="tradinglogo6">
+
+            </div>
+
+        </section>
 
 
 
 
     </main>
-    <footer></footer>
+
+    <footer class="footerab">
+        <img class="cclogoab" src="./images/cclogo.PNG" alt="">
+        <span class="footspanab">2015 Creative Commons Korea. Some Rights Reserved.</span>
+    </footer>
 
 
     <script src="./app.js"></script>
