set document title

--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
-    <title>Home-conference</title>
+    <title>About-conference</title>
 </head>
 
 <body>
@@ -126,17 +126,7 @@
                 </div>
 
             </section>
-
-
-            <section id="feathidden" class="abfeaturedmobile">
-
-                <h3 class="fs">Featured Speakers</h3>
-                <hr class="division_fh3">
-
-                <button class="f1bdown showcontent">More</button>
-                <button class="f1bup hidemobile">less</button>
-
-            </section>
+         
 
             <footer class="footer">
                 <img class="cclogo" src="./images/cclogo.PNG" alt="">
@@ -151,7 +141,7 @@
 
 
 
-    <script src="./app.js"></script>
+    <script src="./appabout.js"></script>
 </body>
 
 </html>
