remove cards content from file

--- a/Home.html
+++ b/Home.html
@@ -127,104 +127,8 @@
                 <h3 class="fs">Featured Speakers</h3>
                 <hr class="division_fh3">
 
-                <div class="featcards">
-                    <div class="card1 showmobile">
-
-                        <img class="oliver" src="./images/oliverlogo.PNG" alt="Oliver Image">
-
-                        <div class="card1rs">
-                            <h4 class="feat1h4">Oliver L. Velez</h4>
-                            <p class="feat1p1">Co-founder of Pristine Capital Holdings, Inc., one of the world&apos;s
-                                leading
-                                educational resources for investors.</p>
-                            <hr class="division-c1">
-                            <p class="feat1p2">has been the subject of numerous articles and books written about Wall
-                                Street&apos;s most successful traders, including popular books such as Bulls, Bears, and
-                                Brains
-                            </p>
-                        </div>
-
-                    </div>
-
-                    <div class="card2 showmobile">
-
-                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                        <div class="card1rs">
-                            <h4 class="feat1h4">Marcello Arrambide</h4>
-                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                                able to train others to obtain their own financial freedom.</p>
-                            <hr class="division-c1">
-                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
-                                about
-                                a
-                                decade through Day Trading Academy.</p>
-                        </div>
-                    </div>
-
-                    <div class="card3 hidemobile">
-
-                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                        <div class="card1rs">
-                            <h4 class="feat1h4">Marcello Arrambide</h4>
-                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                                able to train others to obtain their own financial freedom.</p>
-                            <hr class="division-c1">
-                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
-                                about
-                                a
-                                decade through Day Trading Academy.</p>
-                        </div>
-                    </div>
-
-                    <div class="card4 hidemobile">
-
-                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                        <div class="card1rs">
-                            <h4 class="feat1h4">Marcello Arrambide</h4>
-                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                                able to train others to obtain their own financial freedom.</p>
-                            <hr class="division-c1">
-                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
-                                about
-                                a
-                                decade through Day Trading Academy.</p>
-                        </div>
-                    </div>
-
-                    <div class="card5 hidemobile">
-
-                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                        <div class="card1rs">
-                            <h4 class="feat1h4">Marcello Arrambide</h4>
-                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                                able to train others to obtain their own financial freedom.</p>
-                            <hr class="division-c1">
-                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
-                                about
-                                a
-                                decade through Day Trading Academy.</p>
-                        </div>
-                    </div>
-
-                    <div class="card6 hidemobile">
-
-                        <img class="oliver" src="./images/marcellologo.PNG" alt="Marcello Image">
-
-                        <div class="card1rs">
-                            <h4 class="feat1h4">Marcello Arrambide</h4>
-                            <p class="feat1p1">With his Day Trading Academy, he uses strategies to be
-                                able to train others to obtain their own financial freedom.</p>
-                            <hr class="division-c1">
-                            <p class="feat1p2">Marcello Arrambide has been successfully day-trading in the markets for
-                                about
-                                a
-                                decade through Day Trading Academy.</p>
-                        </div>
-                    </div>
+                <div id="featcards" class="featcards">
+                                       
                 </div>
 
                 <button class="f1bdown showcontent">MORE</button>
