add background color to countries event pics

--- a/About.html
+++ b/About.html
@@ -99,13 +99,17 @@
                     and in Ecuador</span>
                 <div class="imagesdesk">
                     <div class="cole">
+                        <div class="backgcolor">
                         <h4 class="h4cole">2018</h4>
                         <h5 class="h5cole">LA Trading Conference in Colombia</h5>
+                        </div>
                     </div>
 
                     <div class="ecue">
+                        <div class="backgcolor">
                         <h4 class="h4ecue">2017</h4>
                         <h5 class="h5ecue">LA Trading Conference in Ecuador</h5>
+                        </div>
                     </div>
                 </div>
             </section>
