--- a/Home.html
+++ b/Home.html
@@ -81,37 +81,37 @@
 
                 <div class="mainpdesk">
                     <div class="p1">
-                        <div class="logo1"><img src="" alt=""></div>
+                        <div class="logo1"><img src="./images/program_icon_01.png" alt=""></div>
                         <h4 class="h41">Lecture</h4>
                         <p class="p1p1">Listen to the speakers from various countries about their experience at
                             financial
                             markets.</p>
                     </div>
                     <div class="p1">
-                        <div class="logo2"></div>
+                        <div class="logo2"><img src="./images/program_icon_02.png" alt=""></div>
                         <h4 class="h42">CC exhibition</h4>
-                        <p class="p1p2">Listen to the speakers from various countriesabout their experience at financial
+                        <p class="p1p2">Listen to the speakers from various countries about their experience at financial
                             markets.
                         </p>
                     </div>
                     <div class="p1">
-                        <div class="logo3"></div>
+                        <div class="logo3"><img src="./images/program_icon_03.png" alt=""></div>
                         <h4 class="h43">Forum</h4>
-                        <p class="p1p3">Listen to the speakers from various countriesabout their experience at financial
+                        <p class="p1p3">Listen to the speakers from various countries about their experience at financial
                             markets.
                         </p>
                     </div>
                     <div class="p1">
-                        <div class="logo4"></div>
+                        <div class="logo4"><img src="./images/program_icon_04.png" alt=""></div>
                         <h4 class="h44">Workshop</h4>
-                        <p class="p1p4">Listen to the speakers from various countriesabout their experience at financial
+                        <p class="p1p4">Listen to the speakers from various countries about their experience at financial
                             markets.
                         </p>
                     </div>
                     <div class="p1">
-                        <div class="logo5"></div>
+                        <div class="logo5"><img src="./images/program_icon_05.png" alt=""></div>
                         <h4 class="h45">CC Ignite</h4>
-                        <p class="p1p5">Listen to the speakers from various countriesabout their experience at financial
+                        <p class="p1p5">Listen to the speakers from various countries about their experience at financial
                             markets.
                         </p>
                     </div>
