--- a/About.html
+++ b/About.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
-    <title>About-conference</title>
+    <title>about-conference</title>
 </head>
 
 <body>
