--- a/Home.html
+++ b/Home.html
@@ -12,7 +12,7 @@
         rel="stylesheet">
 
     <link rel="stylesheet" href="styles.css">
-    <title>Home-conference</title>
+    <title>home-conference</title>
 </head>
 
 <body>
