--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
             <img class="logo" src="./images/logo.PNG" alt="logo">
             <ul class="desk-bar">
-                <li><a class="top-b" href="./Home.html">Home</a></li>
-                <li><a class="top-b" href="./About.html">About</a></li>
+                <li><a class="top-b" href="./">Home</a></li>
+                <li><a class="top-b" href="./about.html">About</a></li>
                 <li><a class="top-b" href="#join">Join</a></li>
                 <li><a class="top-b" href="#sponsor">Sponsor</a></li>
                 <li><a class="top-b" href="#news">News</a></li>
