--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
             <a class="topx" href="#"><img src="./images/xtopmenu.svg" alt=""></a>
 
             <ul class="top_menu">
-                <li><a class="top-a1" href="./Home.html">Home</a></li>
-                <li><a class="top-a2" href="./About.html">About</a></li>
+                <li><a class="top-a1" href="./">Home</a></li>
+                <li><a class="top-a2" href="./about.html">About</a></li>
                 <li><a class="top-a3" href="#join">Join</a></li>
                 <li><a class="top-a4" href="#sponsor">Sponsor</a></li>
                 <li><a class="top-a5" href="#news">News</a></li>
