--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
                 <li><a class="top-b" href="#sponsor">Sponsor</a></li>
                 <li><a class="top-b" href="#news">News</a></li>
             </ul>
+            <button class="homecc">CC Campaign</button>
         </nav>
 
     </header>
